ACTUALLY FINALLY FIXED LOGIN/LOGOUT REFRESH... Also added dark mode and the random* snarky comments

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.header{
+  text-align: center;
+  font-weight: 600;
+}
+
+.comment-tag{
+  color: #fff;
+}
